Bug 895285 - Handle viewBox="" setting optimization correctly. r=jwatt, a=lsblakk